[gd_scene load_steps=6 format=4 uid="uid://dn0whmdmlqmo7"]

[ext_resource type="Script" path="res://Scripts/endscene.gd" id="1_bwkaj"]
[ext_resource type="TileSet" uid="uid://7esbs755rryu" path="res://Scenes/MainMenu.tres" id="2_ccn4t"]
[ext_resource type="Texture2D" uid="uid://dnjt3bgyfxvqv" path="res://Sprites/Lilypad.png" id="3_bgqx1"]
[ext_resource type="Texture2D" uid="uid://epf3gsim6n1w" path="res://Sprites/Flower.png" id="4_7jy1h"]
[ext_resource type="FontFile" uid="uid://cl4xtiep36hcy" path="res://GrapeSoda.ttf" id="5_lqsol"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwkaj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAD9//3/AAAAAAAAAAD9//7/AAAAAAEAAgD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAAAAAEAAwD9/wIAAAAAAAEAAwD9/wMAAAAAAAEAAgD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAgD9/wYAAAAAAAAAAwD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAwD9/wkAAAAAAAAAAQD9/woAAAAAAAAAAAD+//3/AAAAAAAAAwD+//7/AAAAAAEAAwD+////AAAAAAEAAwD+/wAAAAAAAAEAAwD+/wEAAAAAAAEAAgD+/wIAAAAAAAEAAwD+/wMAAAAAAAEAAQD+/wQAAAAAAAEAAwD+/wUAAAAAAAAAAwD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAgD+/wgAAAAAAAAAAgD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAwD///3/AAAAAAAAAwD///7/AAAAAAEAAQD/////AAAAAAEAAQD//wAAAAAAAAEAAAD//wEAAAAAAAEAAQD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAwD//wUAAAAAAAAAAQD//wYAAAAAAAAAAgD//wcAAAAAAAAAAQD//wgAAAAAAAAAAQD//wkAAAAAAAAAAwD//woAAAAAAAAAAwAAAP3/AAAAAAEAAAAAAP7/AAAAAAEAAQAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAwAAAAEAAAAAAAEAAwAAAAIAAAAAAAEAAgAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAQAAAAUAAAAAAAAAAQAAAAYAAAAAAAAAAwAAAAcAAAAAAAAAAQAAAAgAAAAAAAAAAgAAAAkAAAAAAAAAAQAAAAoAAAAAAAAAAQABAP3/AAAAAAEAAwABAP7/AAAAAAEAAgABAP//AAAAAAEAAwABAAAAAAAAAAEAAAABAAEAAAAAAAEAAQABAAIAAAAAAAEAAgABAAMAAAAAAAEAAwABAAQAAAAAAAEAAQABAAUAAAAAAAAAAAABAAYAAAAAAAAAAQABAAcAAAAAAAAAAwABAAgAAAAAAAAAAwABAAkAAAAAAAAAAgABAAoAAAAAAAAAAAACAP3/AAAAAAEAAwACAP7/AAAAAAEAAAACAP//AAAAAAEAAwACAAAAAAAAAAEAAAACAAEAAAAAAAEAAQACAAIAAAAAAAEAAwACAAMAAAAAAAEAAgACAAQAAAAAAAEAAAACAAUAAAAAAAAAAgACAAYAAAAAAAAAAQACAAcAAAAAAAAAAQACAAgAAAAAAAAAAAACAAkAAAAAAAAAAQACAAoAAAAAAAAAAwADAP3/AAAAAAEAAAADAP7/AAAAAAEAAQADAP//AAAAAAEAAQADAAAAAAAAAAEAAwADAAEAAAAAAAEAAgADAAIAAAAAAAEAAQADAAMAAAAAAAEAAQADAAQAAAAAAAAAAQADAAUAAAAAAAAAAQADAAYAAAAAAAAAAAADAAcAAAAAAAAAAQADAAgAAAAAAAAAAgADAAkAAAAAAAAAAgADAAoAAAAAAAAAAgAEAP3/AAAAAAEAAwAEAP7/AAAAAAEAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAQAEAAEAAAAAAAEAAwAEAAIAAAAAAAAAAQAEAAMAAAAAAAAAAwAEAAQAAAAAAAAAAwAEAAUAAAAAAAAAAgAEAAYAAAAAAAAAAwAEAAcAAAAAAAAAAQAEAAgAAAAAAAAAAQAEAAkAAAAAAAAAAQAEAAoAAAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAQAFAP//AAAAAAAAAQAFAAAAAAAAAAAAAgAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAgAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAgAFAAYAAAAAAAAAAwAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAwAFAAoAAAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAgAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAgAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAwAGAAYAAAAAAAAAAQAGAAcAAAAAAAAAAwAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAwAGAAoAAAAAAAAAAQAHAP3/AAAAAAAAAwAHAP7/AAAAAAAAAgAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAQAHAAEAAAAAAAAAAwAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAwAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAwAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAQAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAQAIAP3/AAAAAAAAAgAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAgAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAwAIAAMAAAAAAAAAAwAIAAQAAAAAAAAAAgAIAAUAAAAAAAAAAwAIAAYAAAAAAAAAAQAIAAcAAAAAAAAAAwAIAAgAAAAAAAAAAgAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAP3/AAAAAAAAAQAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAwAJAAAAAAAAAAAAAQAJAAEAAAAAAAAAAgAJAAIAAAAAAAAAAgAJAAMAAAAAAAAAAwAJAAQAAAAAAAAAAgAJAAUAAAAAAAAAAQAJAAYAAAAAAAAAAQAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAgAJAAkAAAAAAAAAAQAJAAoAAAAAAAAAAwAKAP3/AAAAAAAAAwAKAP7/AAAAAAAAAwAKAP//AAAAAAAAAQAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAQAKAAMAAAAAAAAAAgAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAgAKAAYAAAAAAAAAAgAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAwAKAAoAAAAAAAAAAgALAP3/AAAAAAAAAQALAP7/AAAAAAAAAgALAP//AAAAAAAAAQALAAAAAAAAAAAAAgALAAEAAAAAAAAAAQALAAIAAAAAAAAAAQALAAMAAAAAAAAAAgALAAQAAAAAAAAAAwALAAUAAAAAAAAAAwALAAYAAAAAAAAAAgALAAcAAAAAAAAAAQALAAgAAAAAAAAAAAALAAkAAAAAAAAAAgALAAoAAAAAAAAAAQAMAP3/AAAAAAAAAQAMAP7/AAAAAAAAAgAMAP//AAAAAAAAAwAMAAAAAAAAAAAAAgAMAAEAAAAAAAAAAQAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAgAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAwAMAAgAAAAAAAAAAgAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAwANAP3/AAAAAAAAAAANAP7/AAAAAAAAAgANAP//AAAAAAAAAQANAAAAAAAAAAAAAAANAAEAAAAAAAAAAQANAAIAAAAAAAAAAgANAAMAAAAAAAAAAAANAAQAAAAAAAAAAgANAAUAAAAAAAAAAQANAAYAAAAAAAAAAQANAAcAAAAAAAAAAQANAAgAAAAAAAAAAAANAAkAAAAAAAAAAQANAAoAAAAAAAAAAgD3//r/AAAAAAAAAQD3//v/AAAAAAAAAgD3//z/AAAAAAAAAgD3//3/AAAAAAAAAQD3//7/AAAAAAAAAQD3////AAAAAAAAAAD3/wAAAAAAAAAAAQD3/wEAAAAAAAAAAQD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAQD3/wQAAAAAAAAAAQD3/wUAAAAAAAAAAQD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAwD3/wkAAAAAAAAAAgD3/woAAAAAAAAAAgD3/wsAAAAAAAAAAQD3/wwAAAAAAAAAAQD4//r/AAAAAAAAAQD4//v/AAAAAAAAAAD4//z/AAAAAAAAAgD4//3/AAAAAAAAAAD4//7/AAAAAAAAAQD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAwD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAgD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAQD4/wYAAAAAAAAAAwD4/wcAAAAAAAAAAQD4/wgAAAAAAAAAAQD4/wkAAAAAAAAAAwD4/woAAAAAAAAAAAD4/wsAAAAAAAAAAQD4/wwAAAAAAAAAAQD5//r/AAAAAAAAAwD5//v/AAAAAAAAAAD5//z/AAAAAAAAAQD5//3/AAAAAAAAAwD5//7/AAAAAAAAAAD5////AAAAAAAAAwD5/wAAAAAAAAAAAQD5/wEAAAAAAAAAAQD5/wIAAAAAAAAAAQD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAwD5/wUAAAAAAAAAAgD5/wYAAAAAAAAAAwD5/wcAAAAAAAAAAQD5/wgAAAAAAAAAAwD5/wkAAAAAAAAAAQD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAQD5/wwAAAAAAAAAAwD6//r/AAAAAAAAAQD6//v/AAAAAAAAAgD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAgD6////AAAAAAAAAQD6/wAAAAAAAAAAAQD6/wEAAAAAAAAAAQD6/wIAAAAAAAAAAwD6/wMAAAAAAAAAAgD6/wQAAAAAAAAAAwD6/wUAAAAAAAAAAQD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAwD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAQD6/wwAAAAAAAAAAwD7//r/AAAAAAAAAgD7//v/AAAAAAAAAAD7//z/AAAAAAAAAQD7//3/AAAAAAAAAwD7//7/AAAAAAAAAQD7////AAAAAAAAAgD7/wAAAAAAAAAAAgD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAQD7/wMAAAAAAAAAAQD7/wQAAAAAAAAAAQD7/wUAAAAAAAAAAgD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAgD7/wgAAAAAAAAAAgD7/wkAAAAAAAAAAwD7/woAAAAAAAAAAQD7/wsAAAAAAAAAAAD7/wwAAAAAAAAAAQD8//r/AAAAAAAAAgD8//v/AAAAAAAAAwD8//z/AAAAAAAAAQD8//3/AAAAAAAAAQD8//7/AAAAAAAAAQD8////AAAAAAEAAgD8/wAAAAAAAAEAAgD8/wEAAAAAAAEAAgD8/wIAAAAAAAAAAwD8/wMAAAAAAAAAAQD8/wQAAAAAAAAAAgD8/wUAAAAAAAAAAgD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAwD8/wgAAAAAAAAAAwD8/wkAAAAAAAAAAwD8/woAAAAAAAAAAgD8/wsAAAAAAAAAAgD8/wwAAAAAAAAAAwD9//r/AAAAAAAAAAD9//v/AAAAAAAAAgD9//z/AAAAAAAAAQD9/wsAAAAAAAAAAgD9/wwAAAAAAAAAAgD+//r/AAAAAAAAAwD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+/wsAAAAAAAAAAgD+/wwAAAAAAAAAAQD///r/AAAAAAAAAQD///v/AAAAAAAAAQD///z/AAAAAAAAAgD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAAAAPr/AAAAAAAAAgAAAPv/AAAAAAAAAwAAAPz/AAAAAAAAAQAAAAsAAAAAAAAAAwAAAAwAAAAAAAAAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAQABAPz/AAAAAAAAAQABAAsAAAAAAAAAAwABAAwAAAAAAAAAAAACAPr/AAAAAAAAAAACAPv/AAAAAAAAAwACAPz/AAAAAAAAAAACAAsAAAAAAAAAAQACAAwAAAAAAAAAAQADAPr/AAAAAAAAAQADAPv/AAAAAAAAAwADAPz/AAAAAAAAAwADAAsAAAAAAAAAAQADAAwAAAAAAAAAAAAEAPr/AAAAAAAAAwAEAPv/AAAAAAAAAQAEAPz/AAAAAAAAAgAEAAsAAAAAAAAAAQAEAAwAAAAAAAAAAwAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAwAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAPr/AAAAAAAAAgAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAgAGAAsAAAAAAAAAAQAGAAwAAAAAAAAAAgAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAQAHAPz/AAAAAAAAAAAHAAsAAAAAAAAAAQAHAAwAAAAAAAAAAwAIAPr/AAAAAAAAAwAIAPv/AAAAAAAAAgAIAPz/AAAAAAAAAwAIAAsAAAAAAAAAAwAIAAwAAAAAAAAAAgAJAPr/AAAAAAAAAQAJAPv/AAAAAAAAAwAJAPz/AAAAAAAAAQAJAAsAAAAAAAAAAgAJAAwAAAAAAAAAAgAKAPr/AAAAAAAAAwAKAPv/AAAAAAAAAgAKAPz/AAAAAAAAAQAKAAsAAAAAAAAAAgAKAAwAAAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAgALAPz/AAAAAAAAAAALAAsAAAAAAAAAAQALAAwAAAAAAAAAAwAMAPr/AAAAAAAAAgAMAPv/AAAAAAAAAwAMAPz/AAAAAAAAAQAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAgANAPr/AAAAAAAAAwANAPv/AAAAAAAAAgANAPz/AAAAAAAAAQANAAsAAAAAAAAAAQANAAwAAAAAAAAAAwAOAPr/AAAAAAAAAgAOAPv/AAAAAAAAAgAOAPz/AAAAAAAAAgAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAQAOAP//AAAAAAAAAQAOAAAAAAAAAAAAAQAOAAEAAAAAAAAAAQAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAQAOAAUAAAAAAAAAAQAOAAYAAAAAAAAAAQAOAAcAAAAAAAAAAwAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAwAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAwAOAAwAAAAAAAAAAgAPAPr/AAAAAAAAAgAPAPv/AAAAAAAAAgAPAPz/AAAAAAAAAQAPAP3/AAAAAAAAAwAPAP7/AAAAAAAAAwAPAP//AAAAAAAAAwAPAAAAAAAAAAAAAgAPAAEAAAAAAAAAAgAPAAIAAAAAAAAAAQAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAQAPAAUAAAAAAAAAAwAPAAYAAAAAAAAAAQAPAAcAAAAAAAAAAwAPAAgAAAAAAAAAAwAPAAkAAAAAAAAAAQAPAAoAAAAAAAAAAwAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAgAQAPr/AAAAAAAAAQAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAgAQAP3/AAAAAAAAAgAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAwAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAQAQAAMAAAAAAAAAAgAQAAQAAAAAAAAAAQAQAAUAAAAAAAAAAwAQAAYAAAAAAAAAAgAQAAcAAAAAAAAAAwAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAgAQAAoAAAAAAAAAAQAQAAsAAAAAAAAAAQAQAAwAAAAAAAAAAwARAPr/AAAAAAAAAwARAPv/AAAAAAAAAwARAPz/AAAAAAAAAQARAP3/AAAAAAAAAwARAP7/AAAAAAAAAAARAP//AAAAAAAAAwARAAAAAAAAAAAAAwARAAEAAAAAAAAAAQARAAIAAAAAAAAAAgARAAMAAAAAAAAAAwARAAQAAAAAAAAAAgARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAQARAAgAAAAAAAAAAQARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAwARAAwAAAAAAAAAAAASAPr/AAAAAAAAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAgASAP3/AAAAAAAAAwASAP7/AAAAAAAAAQASAP//AAAAAAAAAQASAAAAAAAAAAAAAgASAAEAAAAAAAAAAgASAAIAAAAAAAAAAQASAAMAAAAAAAAAAwASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAQASAAcAAAAAAAAAAQASAAgAAAAAAAAAAgASAAkAAAAAAAAAAwASAAoAAAAAAAAAAgASAAsAAAAAAAAAAgASAAwAAAAAAAAAAgATAPr/AAAAAAAAAwATAPv/AAAAAAAAAAATAPz/AAAAAAAAAQATAP3/AAAAAAAAAwATAP7/AAAAAAAAAQATAP//AAAAAAAAAQATAAAAAAAAAAAAAQATAAEAAAAAAAAAAwATAAIAAAAAAAAAAwATAAMAAAAAAAAAAQATAAQAAAAAAAAAAwATAAUAAAAAAAAAAwATAAYAAAAAAAAAAwATAAcAAAAAAAAAAgATAAgAAAAAAAAAAgATAAkAAAAAAAAAAwATAAoAAAAAAAAAAQATAAsAAAAAAAAAAwATAAwAAAAAAAAAAgAUAPr/AAAAAAAAAgAUAPv/AAAAAAAAAgAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAgAUAP7/AAAAAAAAAgAUAP//AAAAAAAAAAAUAAAAAAAAAAAAAQAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAQAUAAMAAAAAAAAAAgAUAAQAAAAAAAAAAwAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAgAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAQAUAAkAAAAAAAAAAQAUAAoAAAAAAAAAAgAUAAsAAAAAAAAAAwAUAAwAAAAAAAAAAQAVAPr/AAAAAAAAAwAVAPv/AAAAAAAAAwAVAPz/AAAAAAAAAgAVAP3/AAAAAAAAAwAVAP7/AAAAAAAAAQAVAP//AAAAAAAAAwAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAgAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAgAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAQAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAwAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAwAVAAoAAAAAAAAAAwAVAAsAAAAAAAAAAQAVAAwAAAAAAAAAAAA=")
tile_set = ExtResource("2_ccn4t")

[node name="Lilypad" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(229, 413)
scale = Vector2(8, 8)
texture = ExtResource("3_bgqx1")
hframes = 4
frame = 3

[node name="Lilypad3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-193, 134)
scale = Vector2(8, 8)
texture = ExtResource("3_bgqx1")
hframes = 4
frame = 3

[node name="Lilypad4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(144, -12)
scale = Vector2(8, 8)
texture = ExtResource("3_bgqx1")
hframes = 4
frame = 3

[node name="Lilypad2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(429, -76)
scale = Vector2(8, 8)
texture = ExtResource("3_bgqx1")
hframes = 4
frame = 3

[node name="Flower" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-5.99976, 819.002)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(388, 1149)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1325, 1025)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower5" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1239, 301)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower6" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(991, -207)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower7" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1893, 584)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower8" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1083, 1384)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower9" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(804, 993)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="Flower4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(671, 673)
scale = Vector2(8, 8)
texture = ExtResource("4_7jy1h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.241368, 0.756993, 4.62055e-06, 1)
theme_override_colors/font_shadow_color = Color(0.13168, 0.368218, 9.62615e-08, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 126
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TreesFreed" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Trees Freed: 100"

[node name="WavesSurvived" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Waves Survived: 10"

[node name="TimeTaken" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Time Taken: 00:00:00"

[node name="UpgradesPurchaed" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Upgrades Purchased: 100"

[node name="StartMenu" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Start Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_lqsol")
theme_override_font_sizes/font_size = 36
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartMenu" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
